tests/unit/default/syntax-error/001-create.e.t
---- IN ----
+
---- OUT ----
---- ERR ----
syntax: expected <table> , `PK` , `U` , `I` or `FK` after `+` instead of EOL at position 1 - at line 1
---- EXIT ----
1
